[gd_scene load_steps=3 format=3 uid="uid://c7w0c0r2ereix"]

[ext_resource type="Script" path="res://Scripts/inventory_slot.gd" id="1_cab8u"]
[ext_resource type="Texture2D" uid="uid://cgxwly37vgqxb" path="res://Assets/Ui/Dialog/FacesetBox.png" id="1_mgsat"]

[node name="InventorySlot" type="VBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_cab8u")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
texture = ExtResource("1_mgsat")

[node name="MenuButton" type="MenuButton" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
item_count = 2
popup/item_0/text = "Equip"
popup/item_1/text = "Drop"
popup/item_1/id = 1

[node name="CenterContainer" type="CenterContainer" parent="NinePatchRect/MenuButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/MenuButton/CenterContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
expand_mode = 2
stretch_mode = 4

[node name="OnClickButton" type="Button" parent="NinePatchRect"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 1
offset_right = 60.0
offset_bottom = 60.0

[node name="StacksLabel" type="Label" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.983
anchor_top = 0.983
anchor_right = 0.983
anchor_bottom = 0.983
offset_left = -22.98
offset_top = -23.98
offset_right = -2.98
offset_bottom = -0.980003
text = "12"

[node name="NameLabel" type="Label" parent="."]
layout_mode = 2
